# atk4fusion

./: .gitignore  .gitmodules  atk.py  atk4fusion.py  atk_padding.py  attack.sh  pyproject.toml  requirements.txt  test.py
atk_util/: NYUv2_dataset.py  NYUv2_img_with_patch.py  atk_loss_vanilla.py  save_tool.py
atk_utils/: DFormer.py  NYUv2_dataset.py  NYUv2_img_with_patch.py  atk_loss_vanilla.py  metrics.py  save_tool.py
config/: DFormer.yaml  DFormerv2.yaml  config.py
get_model/: DFormer.py
visualize/: save_img.py
