[project]
name = "dformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.19"
dependencies = [
    "easydict>=1.13",
    "ftfy>=6.3.1",
    "mmcv==2.1.0",
    "numpy==1.26.4",
    "opencv-python==4.8.1.78",
    "regex>=2025.11.3",
    "scipy>=1.15.3",
    "tabulate>=0.9.0",
    "tensorboardx>=2.6.4",
    "timm>=1.0.22",
    "torch==2.1.2",
    "torchaudio==2.1.2",
    "torchvision==0.16.2",
    "tqdm>=4.67.1",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu118"
default = true
